--- a/src/pybind/mgr/cephadm/templates/services/prometheus/prometheus.yml.j2
+++ b/src/pybind/mgr/cephadm/templates/services/prometheus/prometheus.yml.j2
@@ -31,6 +31,10 @@ alerting:
 
 scrape_configs:
   - job_name: 'ceph'
+    relabel_configs:
+    - source_labels: [instance]
+      target_label: instance
+      replacement: 'ceph_cluster'
 {% if secure_monitoring_stack %}
     scheme: https
     tls_config:
